# dijo

./: .gitignore  Cargo.toml  LICENSE  default.nix  dijo.1  flake.nix  notes.txt  readme.md  rustfmt.toml  shell.nix
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: main.yml
Formula/: dijo.rb
nix/: rust.nix
src/: app.rs  command.rs  habit.rs  keybinds.rs  main.rs  theme.rs  utils.rs  views.rs
src/app/: cursor.rs  impl_self.rs  impl_view.rs  message.rs  mod.rs
src/habit/: bit.rs  count.rs  float.rs  mod.rs  prelude.rs  traits.rs
src/views/: bitview.rs  countview.rs  habitview.rs  mod.rs
