[package]
name = "dijo"
version = "0.1.0"
authors = ["Akshay <nerdy@peppe.rs>"]
edition = "2018"
description = "Scriptable, curses-based, digital habit tracker"
homepage = "https://github.com/nerdypepper/dijo"
repository = "https://github.com/nerdypepper/dijo"
readme = './readme.md'
keywords = ["tracker", "event-tracker", "tui", "journal"]
categories = ["date-and-time", "command-line-interface"]
license = "MIT"

[dependencies]
serde_json = "1.0"
lazy_static = "1.4.0"
erased-serde = "0.3"
typetag = "0.1.4"
directories = "3.0.1"
clap = "2.33"
notify = "4.0"

[dependencies.cursive]
version = "0.15"
features = ["termion-backend"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1.0.103"
features = ["derive"]
